--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-/bin/
+#####################################
+#  Team 1073 Robot '16 Git Ignore   #
+#####################################
+
+#For Robot Builder Temporary Files
+*~
+~*
+
+#Other Various Files & Operating System
+*.xml
+sysProps.xml
+build/
+dist/
+bin/
+*.class
+.classpath
+
+#OS related
+.DS_STORE
+.Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+.localized
+
+
